--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,25 +1,47 @@
+// Variables
+$background-image: url("../assets/img/fondo.png");
+$background-color: rgba(20, 65, 78, 0.4);
+$primary-color: #0000ff;
+$secondary-color: #0037ff;
+$delete-button-color: #ff0000c6;
+$delete-button-hover-color: #ff5e00;
+$product-button-color: #0000ffc6;
+$product-button-hover-color: #ffd000b7;
+
+// Mixins
+@mixin btn-properties {
+  padding: 10px 20px;
+  font-size: 16px;
+  border-radius: 10px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+// Styles
 body {
-  background-image: url("../assets/img/fondo.png");
+  background-image: $background-image;
   background-position: top;
   margin: 0;
   padding: 0;
   background-size: auto;
   position: relative;
-}
-body::before {
-  content: "";
-  background-color: rgba(144, 127, 97, 0.551);
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
+
+  &::before {
+    content: "";
+    background-color: rgba(144, 127, 97, 0.551);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+  }
 }
 
 .other-body {
   background-image: none;
-  background-color: rgba(20, 65, 78, 0.4);
+  background-color: $background-color;
 }
 
 .container {
@@ -36,63 +58,67 @@ header {
   background-color: rgba(255, 255, 255, 0.1);
   place-items: center;
   transition: background-color 0.3s, font-size 0.3s, color 0.3s;
-}
-header .row {
-  display: grid;
-  grid-template-columns: auto 1fr;
-  place-items: center;
-}
-header .logo-container {
-  display: grid;
-  align-items: center;
-  justify-content: flex-start;
-  margin-left: 20px;
-}
-header .logo {
-  margin-left: -50px;
-  height: 25px;
-  width: auto;
-}
-header .carrito {
-  float: right;
-  margin-left: 10px;
-  width: auto;
-  height: 25px;
-}
-header nav ul {
-  display: flex;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  font-size: 20px;
-  align-items: center;
-}
-header nav ul li {
-  margin-right: 10px;
-}
-header nav ul li a {
-  color: #000000;
-  text-decoration: none;
-  transition: color 0.3s;
-}
-header nav ul li a:hover {
-  color: #0037ff;
-}
-header .nav-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-header .button,
-header nav button {
-  padding: 10px 20px;
-  font-size: 16px;
-  border-radius: 10px;
-  font-family: Arial, Helvetica, sans-serif;
-  text-decoration: none;
-  cursor: pointer;
-  background-color: #0000ff;
-  color: #ffffff;
+
+  .row {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    place-items: center;
+  }
+
+  .logo-container {
+    display: grid;
+    align-items: center;
+    justify-content: flex-start;
+    margin-left: 20px;
+  }
+
+  .logo {
+    margin-left: -50px;
+    height: 25px;
+    width: auto;
+  }
+  .carrito {
+    float: right;
+    margin-left: 10px;
+    width: auto;
+    height: 25px;
+  }
+
+  nav ul {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    font-size: 20px;
+    align-items: center;
+  }
+
+  nav ul li {
+    margin-right: 10px;
+  }
+
+  nav ul li a {
+    color: #000000;
+    text-decoration: none;
+    transition: color 0.3s;
+
+    &:hover {
+      color: $secondary-color;
+    }
+  }
+
+  .nav-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .button,
+  nav button {
+    @include btn-properties;
+    background-color: $primary-color;
+    color: #ffffff;
+  }
 }
 
 h1 {
@@ -125,42 +151,48 @@ h1 {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease;
-}
-.contact-container:hover {
-  transform: scale(1.05);
-}
-.contact-container .contact-info,
-.contact-container .map {
-  flex-basis: 40%;
-  margin-bottom: 20px;
-}
-.contact-container .map img {
-  width: 100%;
-  height: auto;
-}
-.contact-container .contact-info h2 {
-  margin-bottom: 10px;
-}
-.contact-container .contact-info p {
-  margin: 5px 0;
+
+  &:hover {
+    transform: scale(1.05);
+  }
+
+  .contact-info,
+  .map {
+    flex-basis: 40%;
+    margin-bottom: 20px;
+  }
+
+  .map img {
+    width: 100%;
+    height: auto;
+  }
+
+  .contact-info h2 {
+    margin-bottom: 10px;
+  }
+
+  .contact-info p {
+    margin: 5px 0;
+  }
 }
 
 .product {
   display: flex;
   align-items: center;
-  background-color: rgba(255, 255, 255, 0.768627451);
+  background-color: #ffffffc4;
   padding: 15px;
   border-radius: 12px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  border: 3px solid rgba(0, 0, 0, 0.5960784314);
+  border: 3px solid #00000098;
   width: 80%;
   margin: 0 auto;
   margin-bottom: 10px;
-}
-.product h3 {
-  margin: 0;
-  padding: 20px;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+
+  h3 {
+    margin: 0;
+    padding: 20px;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  }
 }
 
 .btn-container {
@@ -170,21 +202,17 @@ h1 {
 }
 
 .btn-delete {
-  padding: 10px 20px;
-  font-size: 16px;
-  border-radius: 10px;
-  font-family: Arial, Helvetica, sans-serif;
-  text-decoration: none;
-  cursor: pointer;
-  background-color: rgba(255, 0, 0, 0.7764705882);
+  @include btn-properties;
+  background-color: $delete-button-color;
   color: #ffffff;
   margin-top: 10px;
   margin-left: 50px;
   transition: transform 0.4s ease, background-color 0.4s ease;
-}
-.btn-delete:hover {
-  background-color: #ff5e00;
-  transform: scale(1.15);
+
+  &:hover {
+    background-color: $delete-button-hover-color;
+    transform: scale(1.15);
+  }
 }
 
 .btn-products {
@@ -193,33 +221,35 @@ h1 {
   padding: 10px 20px;
   font-size: 18px;
   border-radius: 8px;
-  background-color: rgba(0, 0, 255, 0.7764705882);
+  background-color: $product-button-color;
   color: #fff;
   text-decoration: none;
-  width: -moz-fit-content;
   width: fit-content;
   margin-left: auto;
   margin-right: auto;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   transition: background-color 0.3s;
   border: 2px solid #000000;
-}
-.btn-products::after {
-  position: absolute;
-  top: 50%;
-  right: 10px;
-  transform: translateY(-50%);
-  font-size: 18px;
-  transition: right 0.3s;
-}
-.btn-products:hover {
-  background-color: rgba(255, 208, 0, 0.7176470588);
-  color: #fff;
-  cursor: pointer;
-  transform: scale(1.1);
-}
-.btn-products:hover::after {
-  right: 20px;
+
+  &::after {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    font-size: 18px;
+    transition: right 0.3s;
+  }
+
+  &:hover {
+    background-color: $product-button-hover-color;
+    color: #fff;
+    cursor: pointer;
+    transform: scale(1.1);
+
+    &::after {
+      right: 20px;
+    }
+  }
 }
 
 .about-us-container {
@@ -231,9 +261,10 @@ h1 {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease;
-}
-.about-us-container:hover {
-  transform: scale(1.05);
+
+  &:hover {
+    transform: scale(1.05);
+  }
 }
 
 @media (max-width: 600px) {
@@ -251,21 +282,26 @@ h1 {
       transform: translateY(0);
     }
   }
+
   .cart-page {
     background-size: cover;
   }
+
   .products-page {
     background-size: cover;
   }
+
   nav ul li a {
     font-size: 14px;
   }
+
   .button,
   nav button,
   footer button {
     padding: 6px 12px;
     font-size: 12px;
   }
+
   .logo {
     height: 15px;
     width: auto;
@@ -278,21 +314,25 @@ h1 {
     justify-content: flex-start;
     margin-left: 41px;
   }
+
   .carrito {
     margin-left: 5px;
     width: 20px;
     height: auto;
     margin-top: 0px;
   }
+
   .product img {
     width: 75px;
     height: auto;
     border-radius: 20px;
   }
+
   header {
     height: 40px;
     padding: 5px;
   }
+
   .centered-container {
     background-size: cover;
     background-repeat: no-repeat;
@@ -300,29 +340,32 @@ h1 {
     border-radius: 20px;
     margin-top: 150px;
   }
+
   .centered-container h1 {
     font-size: 24px;
     margin-top: 15px;
     animation: fadeInUp 1s ease-out;
     text-align: center;
   }
+
   .btn-products {
     display: block;
     margin: 20px auto;
     padding: 5px 10px;
     font-size: 14px;
     border-radius: 8px;
-    background-color: rgba(0, 0, 255, 0.7764705882);
+    background-color: $product-button-color;
     color: #fff;
     text-decoration: none;
-    width: -moz-fit-content;
     width: fit-content;
     margin-left: auto;
     margin-right: auto;
-    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+      sans-serif;
     transition: background-color 0.3s;
     border: 2px solid #000000;
   }
+
   .btn-products::after {
     position: absolute;
     top: 50%;
@@ -331,22 +374,27 @@ h1 {
     font-size: 18px;
     transition: right 0.3s;
   }
+
   .btn-products:hover {
-    background-color: rgba(255, 208, 0, 0.7176470588);
+    background-color: $product-button-hover-color;
     color: #fff;
     cursor: pointer;
     transform: scale(1.1);
   }
+
   .btn-products:hover::after {
     right: 20px;
   }
+
   h1 {
     font-size: 30px;
     padding: 20px;
   }
+
   .about-us-container {
     font-size: 12px;
   }
+
   .contact-container {
     margin-left: 20px;
     margin-right: 20px;
@@ -363,30 +411,34 @@ h1 {
     transition: transform 0.3s ease;
     font-size: 12px;
   }
+
   .contact-info,
   .map {
     flex-basis: 20%;
     margin-bottom: 10px;
   }
+
   .product {
     display: flex;
     align-items: center;
-    background-color: rgba(255, 255, 255, 0.768627451);
+    background-color: #ffffffc4;
     padding: 10px;
     border-radius: 12px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    border: 3px solid rgba(0, 0, 0, 0.5960784314);
+    border: 3px solid #00000098;
     width: 80%;
     height: 80px;
     margin: 20px auto;
     margin-bottom: 10px;
   }
+
   .product h3 {
     margin: 0;
     padding: 20px;
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     font-size: 12px;
   }
+
   .btn-container {
     display: flex;
     flex-direction: column;
@@ -394,8 +446,9 @@ h1 {
     width: 200px;
     margin-bottom: 10px;
   }
+
   .btn-delete {
-    background-color: rgba(255, 0, 0, 0.7764705882);
+    background-color: $delete-button-color;
     color: #ffffff;
     padding: 10px 15px;
     border-radius: 10px;
@@ -405,13 +458,16 @@ h1 {
     font-size: 8px;
   }
 }
+
 @media (min-width: 601px) and (max-width: 1200px) {
   .cart-page {
     background-size: cover;
   }
+
   .products-page {
     background-size: cover;
   }
+
   @keyframes fadeInUp {
     0% {
       opacity: 1;
@@ -426,38 +482,44 @@ h1 {
       transform: translateY(0);
     }
   }
+
   nav ul li a {
     font-size: 20px;
   }
+
   .button,
   nav button,
   footer button {
     padding: 8px 12px;
     font-size: 16px;
   }
+
   .logo {
     width: 60px;
     height: auto;
     margin-left: -350px;
     margin-right: 20px;
   }
+
   .carrito {
     margin-left: 5px;
     width: 25px;
     height: auto;
     margin-top: 0px;
   }
+
   .product img {
     width: 20%;
     height: 100px;
-    -o-object-fit: cover;
-       object-fit: cover;
+    object-fit: cover;
     border-radius: 20px;
   }
+
   header {
     height: 50px;
     padding: 10px;
   }
+
   .centered-container {
     text-align: center;
     margin-top: 25vh;
@@ -474,6 +536,7 @@ h1 {
     border-radius: 40px;
     animation: fadeInUpContainer 1s ease-out;
   }
+
   .centered-container h1 {
     animation: fadeInUp 1s ease-out;
     text-align: center;
@@ -481,13 +544,16 @@ h1 {
     margin-top: 20px;
   }
 }
+
 @media (min-width: 1201px) {
   .cart-page {
     background-size: cover;
   }
+
   .products-page {
     background-size: cover;
   }
+
   @keyframes fadeInUp {
     0% {
       opacity: 1;
@@ -502,34 +568,42 @@ h1 {
       transform: translateY(0);
     }
   }
+
   .logo {
     width: 60px;
     height: auto;
     margin-left: -350px;
     margin-right: 20px;
   }
+
   .carrito {
     width: 30px;
   }
+
   header {
     height: 50px;
     padding: 10px;
   }
+
   nav ul li {
     margin-right: 10px;
   }
+
   .button,
   nav button {
     padding: 10px 20px;
     font-size: 16px;
   }
+
   h1 {
     font-size: 40px;
     padding: 20px;
   }
+
   .footer {
     padding: 10px;
   }
+
   .contact-container {
     margin-left: 40px;
     margin-right: 40px;
@@ -546,37 +620,42 @@ h1 {
     transition: transform 0.3s ease;
     font-size: 16px;
   }
+
   .contact-info,
   .map {
     flex-basis: 40%;
     margin-bottom: 20px;
   }
+
   .product {
     display: flex;
     align-items: center;
-    background-color: rgba(255, 255, 255, 0.768627451);
+    background-color: #ffffffc4;
     padding: 15px;
     border-radius: 12px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    border: 3px solid rgba(0, 0, 0, 0.5960784314);
+    border: 3px solid #00000098;
     width: 80%;
     margin: 0 auto;
     margin-bottom: 10px;
     height: 150px;
   }
+
   .product img {
     width: 15%;
     height: 150px;
     border-radius: 20px;
   }
+
   .btn-container {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
     width: 200px;
   }
+
   .btn-delete {
-    background-color: rgba(255, 0, 0, 0.7764705882);
+    background-color: $delete-button-color;
     color: #ffffff;
     padding: 15px 20px;
     border-radius: 10px;
@@ -606,4 +685,4 @@ h1 {
     animation: fadeInUp 1s ease-out;
     text-align: center;
   }
-}/*# sourceMappingURL=styles.css.map */
+}
