--- a/css/stylesOEM.css
+++ b/css/stylesOEM.css
@@ -16,12 +16,10 @@ body::before {
   height: 100%;
   z-index: -1;
 }
-
 .other-body {
   background-image: none;
   background-color: rgba(20, 65, 78, 0.4);
 }
-
 .container {
   max-width: 1200px;
   margin: 0 auto;
@@ -37,29 +35,36 @@ header {
   place-items: center;
   transition: background-color 0.3s, font-size 0.3s, color 0.3s;
 }
+
 header .row {
   display: grid;
   grid-template-columns: auto 1fr;
   place-items: center;
 }
-header .logo-container {
+
+.logo-container {
   display: grid;
   align-items: center;
   justify-content: flex-start;
   margin-left: 20px;
 }
-header .logo {
-  margin-left: -50px;
-  height: 25px;
-  width: auto;
+
+.logo {
+  width: 90px;
+  height: auto;
+  margin-left: -350px;
+  height: 50px;
+  width: 140px;
 }
-header .carrito {
+
+.carrito {
   float: right;
   margin-left: 10px;
   width: auto;
   height: 25px;
 }
-header nav ul {
+
+nav ul {
   display: flex;
   list-style: none;
   margin: 0;
@@ -67,32 +72,35 @@ header nav ul {
   font-size: 20px;
   align-items: center;
 }
-header nav ul li {
+
+nav ul li {
   margin-right: 10px;
 }
-header nav ul li a {
+
+nav ul li a {
   color: #000000;
   text-decoration: none;
   transition: color 0.3s;
 }
-header nav ul li a:hover {
+nav ul li a:hover {
   color: #0037ff;
 }
-header .nav-container {
+.nav-container {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-header .button,
-header nav button {
+
+.button,
+nav button {
   padding: 10px 20px;
   font-size: 16px;
+  background-color: #0000ff;
+  color: #ffffff;
+  cursor: pointer;
   border-radius: 10px;
   font-family: Arial, Helvetica, sans-serif;
   text-decoration: none;
-  cursor: pointer;
-  background-color: #0000ff;
-  color: #ffffff;
 }
 
 h1 {
@@ -126,37 +134,43 @@ h1 {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease;
 }
+
 .contact-container:hover {
   transform: scale(1.05);
 }
-.contact-container .contact-info,
-.contact-container .map {
+
+.contact-info,
+.map {
   flex-basis: 40%;
   margin-bottom: 20px;
 }
-.contact-container .map img {
+
+.map img {
   width: 100%;
   height: auto;
 }
-.contact-container .contact-info h2 {
+
+.contact-info h2 {
   margin-bottom: 10px;
 }
-.contact-container .contact-info p {
+
+.contact-info p {
   margin: 5px 0;
 }
 
 .product {
   display: flex;
   align-items: center;
-  background-color: rgba(255, 255, 255, 0.768627451);
+  background-color: #ffffffc4;
   padding: 15px;
   border-radius: 12px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  border: 3px solid rgba(0, 0, 0, 0.5960784314);
+  border: 3px solid #00000098;
   width: 80%;
   margin: 0 auto;
   margin-bottom: 10px;
 }
+
 .product h3 {
   margin: 0;
   padding: 20px;
@@ -168,20 +182,18 @@ h1 {
   flex-direction: column;
   align-items: flex-end;
 }
-
 .btn-delete {
-  padding: 10px 20px;
-  font-size: 16px;
-  border-radius: 10px;
-  font-family: Arial, Helvetica, sans-serif;
-  text-decoration: none;
-  cursor: pointer;
-  background-color: rgba(255, 0, 0, 0.7764705882);
+  background-color: #ff0000c6;
   color: #ffffff;
+  border: none;
+  padding: 10px 15px;
+  border-radius: 10px;
+  cursor: pointer;
   margin-top: 10px;
   margin-left: 50px;
   transition: transform 0.4s ease, background-color 0.4s ease;
 }
+
 .btn-delete:hover {
   background-color: #ff5e00;
   transform: scale(1.15);
@@ -193,10 +205,9 @@ h1 {
   padding: 10px 20px;
   font-size: 18px;
   border-radius: 8px;
-  background-color: rgba(0, 0, 255, 0.7764705882);
+  background-color: #0000ffc6;
   color: #fff;
   text-decoration: none;
-  width: -moz-fit-content;
   width: fit-content;
   margin-left: auto;
   margin-right: auto;
@@ -204,6 +215,7 @@ h1 {
   transition: background-color 0.3s;
   border: 2px solid #000000;
 }
+
 .btn-products::after {
   position: absolute;
   top: 50%;
@@ -212,8 +224,9 @@ h1 {
   font-size: 18px;
   transition: right 0.3s;
 }
+
 .btn-products:hover {
-  background-color: rgba(255, 208, 0, 0.7176470588);
+  background-color: #ffd000b7;
   color: #fff;
   cursor: pointer;
   transform: scale(1.1);
@@ -236,6 +249,11 @@ h1 {
   transform: scale(1.05);
 }
 
+/*---------------------------------------------------------------------------------------------------*/
+/*---------------------------------------------------------------------------------------------------*/
+/*---------------------------------------------------------------------------------------------------*/
+
+/* Estilos para pantallas menores a 600px */
 @media (max-width: 600px) {
   @keyframes fadeInUp {
     0% {
@@ -257,42 +275,43 @@ h1 {
   .products-page {
     background-size: cover;
   }
+
   nav ul li a {
     font-size: 14px;
   }
+
   .button,
   nav button,
   footer button {
     padding: 6px 12px;
     font-size: 12px;
   }
+
   .logo {
-    height: 15px;
-    width: auto;
-    margin-left: 30px;
+    width: 50px;
+    height: auto;
+    margin-left: -21px;
     margin-right: 20px;
   }
-  header .logo-container {
-    display: grid;
-    align-items: center;
-    justify-content: flex-start;
-    margin-left: 41px;
-  }
+
   .carrito {
     margin-left: 5px;
     width: 20px;
     height: auto;
     margin-top: 0px;
   }
+
   .product img {
     width: 75px;
     height: auto;
     border-radius: 20px;
   }
+
   header {
     height: 40px;
     padding: 5px;
   }
+
   .centered-container {
     background-size: cover;
     background-repeat: no-repeat;
@@ -300,26 +319,28 @@ h1 {
     border-radius: 20px;
     margin-top: 150px;
   }
+
   .centered-container h1 {
     font-size: 24px;
     margin-top: 15px;
-    animation: fadeInUp 1s ease-out;
+    animation: fadeInUp 1s ease-out; /* Agrega la animación fadeInUp */
     text-align: center;
   }
+
   .btn-products {
     display: block;
     margin: 20px auto;
     padding: 5px 10px;
     font-size: 14px;
     border-radius: 8px;
-    background-color: rgba(0, 0, 255, 0.7764705882);
+    background-color: #0000ffc6;
     color: #fff;
     text-decoration: none;
-    width: -moz-fit-content;
     width: fit-content;
     margin-left: auto;
     margin-right: auto;
-    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+      sans-serif;
     transition: background-color 0.3s;
     border: 2px solid #000000;
   }
@@ -331,8 +352,9 @@ h1 {
     font-size: 18px;
     transition: right 0.3s;
   }
+
   .btn-products:hover {
-    background-color: rgba(255, 208, 0, 0.7176470588);
+    background-color: #ffd000b7;
     color: #fff;
     cursor: pointer;
     transform: scale(1.1);
@@ -368,14 +390,16 @@ h1 {
     flex-basis: 20%;
     margin-bottom: 10px;
   }
+  /* .container {
+  } */
   .product {
     display: flex;
     align-items: center;
-    background-color: rgba(255, 255, 255, 0.768627451);
+    background-color: #ffffffc4;
     padding: 10px;
     border-radius: 12px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    border: 3px solid rgba(0, 0, 0, 0.5960784314);
+    border: 3px solid #00000098;
     width: 80%;
     height: 80px;
     margin: 20px auto;
@@ -395,7 +419,7 @@ h1 {
     margin-bottom: 10px;
   }
   .btn-delete {
-    background-color: rgba(255, 0, 0, 0.7764705882);
+    background-color: #ff0000c6;
     color: #ffffff;
     padding: 10px 15px;
     border-radius: 10px;
@@ -405,6 +429,8 @@ h1 {
     font-size: 8px;
   }
 }
+
+/* Estilos para pantallas entre 600 y 1200 */
 @media (min-width: 601px) and (max-width: 1200px) {
   .cart-page {
     background-size: cover;
@@ -429,16 +455,18 @@ h1 {
   nav ul li a {
     font-size: 20px;
   }
+
   .button,
   nav button,
   footer button {
     padding: 8px 12px;
     font-size: 16px;
   }
+
   .logo {
-    width: 60px;
+    width: 80px;
     height: auto;
-    margin-left: -350px;
+    margin-left: 20px;
     margin-right: 20px;
   }
   .carrito {
@@ -447,17 +475,22 @@ h1 {
     height: auto;
     margin-top: 0px;
   }
+
   .product img {
     width: 20%;
     height: 100px;
-    -o-object-fit: cover;
-       object-fit: cover;
+    object-fit: cover;
     border-radius: 20px;
   }
+
   header {
     height: 50px;
+    width: 100%;
+    display: grid;
     padding: 10px;
+    place-items: center;
   }
+
   .centered-container {
     text-align: center;
     margin-top: 25vh;
@@ -474,13 +507,16 @@ h1 {
     border-radius: 40px;
     animation: fadeInUpContainer 1s ease-out;
   }
+
   .centered-container h1 {
     animation: fadeInUp 1s ease-out;
     text-align: center;
-    font-size: 32px;
+    font-size: 20px;
     margin-top: 20px;
   }
 }
+
+/* Estilos para pantallas con un minimo de 1200px */
 @media (min-width: 1201px) {
   .cart-page {
     background-size: cover;
@@ -508,81 +544,40 @@ h1 {
     margin-left: -350px;
     margin-right: 20px;
   }
+
   .carrito {
     width: 30px;
   }
+
   header {
     height: 50px;
     padding: 10px;
   }
+
   nav ul li {
     margin-right: 10px;
   }
+
   .button,
   nav button {
     padding: 10px 20px;
     font-size: 16px;
   }
+
   h1 {
-    font-size: 40px;
+    font-size: 50px;
     padding: 20px;
   }
-  .footer {
-    padding: 10px;
+
+  nav ul li a {
+    font-size: 20px;
+    margin-left: 10px;
   }
-  .contact-container {
-    margin-left: 40px;
-    margin-right: 40px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: flex-start;
-    margin-top: 20px;
-    background-color: rgba(255, 255, 255, 0.75);
-    padding: 20px;
-    border-radius: 20px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease;
-    font-size: 16px;
-  }
-  .contact-info,
-  .map {
-    flex-basis: 40%;
-    margin-bottom: 20px;
-  }
-  .product {
-    display: flex;
-    align-items: center;
-    background-color: rgba(255, 255, 255, 0.768627451);
-    padding: 15px;
-    border-radius: 12px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    border: 3px solid rgba(0, 0, 0, 0.5960784314);
-    width: 80%;
-    margin: 0 auto;
-    margin-bottom: 10px;
-    height: 150px;
-  }
+
   .product img {
     width: 15%;
     height: 150px;
     border-radius: 20px;
-  }
-  .btn-container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    width: 200px;
-  }
-  .btn-delete {
-    background-color: rgba(255, 0, 0, 0.7764705882);
-    color: #ffffff;
-    padding: 15px 20px;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: transform 0.4s ease, background-color 0.4s ease;
-    font-size: 18px;
   }
   .centered-container {
     text-align: center;
@@ -606,4 +601,4 @@ h1 {
     animation: fadeInUp 1s ease-out;
     text-align: center;
   }
-}/*# sourceMappingURL=styles.css.map */
+}
